// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImages /> should match the snapshot with images 1`] = `
<DocumentFragment>
  <div
    class="content w-100"
  >
    <div
      class="w-100 aspect-ratio aspect-ratio--1x1"
    >
      <svg
        class="content-loader-mock"
      >
        <rect
          height="100%"
          width="100%"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProductImages /> should match the snapshot with no images 1`] = `
<DocumentFragment>
  <div
    class="content w-100"
  >
    <svg
      fill="none"
      height="100%"
      viewBox="0 0 512 512"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        fill="#F2F2F2"
        height="512"
        width="512"
      />
      <rect
        height="150.474"
        stroke="#CACBCC"
        stroke-width="2"
        width="144.286"
        x="183.857"
        y="180.2"
      />
      <path
        d="M183.78 303.688H328.214"
        stroke="#CACBCC"
        stroke-width="2"
      />
      <path
        d="M205.082 279.563L223.599 240.507L242.116 260.035L269.892 220.979L306.926 279.563H205.082Z"
        stroke="#CACBCC"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
      <path
        d="M252.225 213.939C252.225 219.822 247.66 224.52 242.114 224.52C236.569 224.52 232.004 219.822 232.004 213.939C232.004 208.057 236.569 203.359 242.114 203.359C247.66 203.359 252.225 208.057 252.225 213.939Z"
        stroke="#CACBCC"
        stroke-width="2"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<ProductImages /> should match the snapshot with thumbnails in right position 1`] = `
<DocumentFragment>
  <div
    class="content w-100"
  >
    <svg
      fill="none"
      height="100%"
      viewBox="0 0 512 512"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        fill="#F2F2F2"
        height="512"
        width="512"
      />
      <rect
        height="150.474"
        stroke="#CACBCC"
        stroke-width="2"
        width="144.286"
        x="183.857"
        y="180.2"
      />
      <path
        d="M183.78 303.688H328.214"
        stroke="#CACBCC"
        stroke-width="2"
      />
      <path
        d="M205.082 279.563L223.599 240.507L242.116 260.035L269.892 220.979L306.926 279.563H205.082Z"
        stroke="#CACBCC"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
      <path
        d="M252.225 213.939C252.225 219.822 247.66 224.52 242.114 224.52C236.569 224.52 232.004 219.822 232.004 213.939C232.004 208.057 236.569 203.359 242.114 203.359C247.66 203.359 252.225 208.057 252.225 213.939Z"
        stroke="#CACBCC"
        stroke-width="2"
      />
    </svg>
  </div>
</DocumentFragment>
`;
